# uri-geo-lib

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  pfs-rfc5870.kdev4
.kdev4/: pfs-rfc5870.kdev4
examples/: CMakeLists.txt  composer.cpp  custom_parser.cpp  parser.cpp
include/pfs/rfc5870/: composer.hpp  error.hpp  geo.hpp  parser.hpp  qt_suppl.hpp
include/pfs/uri/geo/: composer.hpp  error.hpp  geo.hpp  parser.hpp  qt_suppl.hpp
tests/: CMakeLists.txt  composer.cpp  parser.cpp
